# uniclogs-docs

./: .gitignore  .gitmodules  ORESAT_generic_9k6_fsk_ax25.grc  README.md  README.txt  apiary.apib  demo.py  install_mission_server.sh  mission-server-sop.md  oreflat0.tle  tle-validate-checksum.py
api/: log_interface.py  requirements.txt
command/: requirements.txt  schedule_pass.py
commands/: schedule_pass.py
cosi/: Main.py  README.md  __init__.py  common.py  cosi-runner  cosid.py  cosid.service  dart_db.py  database.py  dev-requirements.txt  example  models.py  passData.csv  pass_calculator.py  requirements.txt  satnogs.py  schedule_pass.py  send_test_cmd.py  setup.py  spacetrack.py  table_schemas.sql  utilities.py
cosmos/: .gitignore  Dockerfile  Gemfile  Launcher.bat  Makefile  README.md  start.sh
db_schemas/: pass.sql  requests.sql  telemetry.sql  tles.sql  user_roles.sql  user_token.sql  user_tokens.sql
docs/: conf.py  flatnogs.rst  glossary.rst  gs-config.json  index.rst  oreflat.rst  repos.rst  sop.md  standards.rst
event-handler/: .gitignore  README.md  event_handler.py
gnuradio/: FEC_dec_block.grc  FEC_enc_block.grc  FM_receiver.grc  dec_block.grc  deframing_block.grc  demod_block.grc  descrambler_block.grc  enc_block.grc  framing_block.grc  limesdr_FM_receiver.grc  mod_block.grc  scrambler_block.grc  test_rx.py  test_tx.grc  test_tx.py  uniclogs.grc  uniclogs_sdr.grc  untitled.grc
gr-uniclogs/: CMakeLists.txt  MANIFEST.md
pass_calculator/: README.md  __init__.py  calculator.py  dev-requirements.txt  example.py  orbitalpass.py  requirements.txt  setup.py
rads/: README.md  README.txt  commonrads.py  db_interface.py  dev-requirements.txt  director.py  log_interface.py  models.py  queries.py  request_data.py  requirements.txt  setup.cfg  setup.py
rads/docs/: conf.py  index.rst
rads/docs/internals/: index.rst  modules.rst  rads.command.rst  rads.database.rst  rads.rst  rads.ui.rst  rads.ui.tables.rst
rads/rads/database/: db_interface.py
rads/rads/ui/: director.py  eb_pass_table.py  eb_request.py
rads/scripts/: clear_db.py  generate_random_requests.py  generate_requests.py  test_data.py
rads/src/: db_interface.py  director.py  eb_pass_table.py  eb_request.py  insert.py  request_data.py  request_table.py
rads/src/rads/: __main__.py
rads/src/rads/command/: requirements.txt  schedule_pass.py
rads/src/rads/database/: db_interface.py  insert.py  models.py  query.py  request_data.py  update.py
rads/src/rads/ui/: approve_deny_window.py  archive_window.py  director.py  eb_request_window.py  main_menu.py  request_table.py  schedule_window.py
rads/src/rads/ui/tables/: eb_pass_table.py  request_table.py
rads/tests/: db_add_tle.py  generate_requests.py
scripts/: README.md  generate_pg_users.sh  generate_requests.py  generate_test_data.py  (+3 more)
stationd/: configure.ac
stationd/doc/: README.md
stationd/src/: Makefile  Makefile.am  ads1115.c  ads1115.h  common.c  common.h  mcp23017.c  mcp23017.h  mcp9808.c  mcp9808.h  server.c  server.h  statemachine.c  statemachine.h  stationd.c  stationd.h
(+252 files in other folders)
