[bdist_wheel]
universal = 0

[metadata]
name = rads
version = attr: rads.__version__
license = GPL v3
license_file = ../LICENSE
description = Request Approve Deny Service
long_description = file: README.rst
author = Ryan Medick
author_email = rmedick@pdx.edu
maintainer = Ryan Medick
maintainer_email = rmedick@pdx.edu
url = https://github.com/oresat/uniclogs-software
classifiers =
    License :: OSI Approved :: GPL v3 License
    Programming Language :: Python

[options]
package_dir=
    =src
packages = find:

python_requires = >=3.5

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rads = rads.ui.main_menu:main
