[bdist_wheel]
universal = 0

[metadata]
name = uniclogs-rads
version = attr: rads.__version__
license = GPLv3
license_file = ../LICENSE
description = Request Approve Deny Service
long_description = file: README.md
author = Ryan Medick
author_email = rmedick@pdx.edu
maintainer = Ryan Medick
maintainer_email = rmedick@pdx.edu
url = https://github.com/oresat/uniclogs-software
classifiers =
    Programming Language :: Python

[options]
package_dir=
    =src
packages = find:

install_requires=
    loguru>=0.5.0
    sqlalchemy>=1.3.18
    reverse_geocoder>=1.5.1
    pass-calculator>=1.0.1

python_requires = >=3.5

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rads = rads.ui.main_menu:main
